# MatchAnything

./: .gitignore  README.md  example_usage.py  pyproject.toml
configs/models/: eloftr_model.py  roma_model.py
match_anything/utils/: model_utils.py
src/config/: default.py
tools/: evaluate_datasets.py
